--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In mollitia laudantium, temporibus assumenda quae recusandae facilis quod, atque repellendus nam dolore? Laboriosam amet reiciendis quam quaerat iure rerum nisi minima.</p>
+    </div>
 
 </body>
 </html>
