--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In mollitia laudantium, temporibus assumenda quae recusandae facilis quod, atque repellendus nam dolore? Laboriosam amet reiciendis quam quaerat iure rerum nisi minima.</p>
+    </div>
+    <div>
+        <h3>My Second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In mollitia laudantium, temporibus assumenda quae recusandae facilis quod, atque repellendus nam dolore? Laboriosam amet reiciendis quam quaerat iure rerum nisi minima.</p>
+    </div>
+    <div>
+        <h3>My Third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In mollitia laudantium, temporibus assumenda quae recusandae facilis quod, atque repellendus nam dolore? Laboriosam amet reiciendis quam quaerat iure rerum nisi minima.</p>
     </div>
 
