--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h3>My Third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In mollitia laudantium, temporibus assumenda quae recusandae facilis quod, atque repellendus nam dolore? Laboriosam amet reiciendis quam quaerat iure rerum nisi minima.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 
 </body>
 </html>
