added a image of sufia

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>Hi everyone i am sufia</h3>
+        <img src="images/sheldon-4OpJoosWwMs-unsplash.jpg" alt="" height="350px" width="270px">
+    </div>
 
 </body>
 </html>
